--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,7 @@ env:
   es2021: true
 extends:
   - standard
+  - 'prettier'
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: latest
